--- a/styles.css
+++ b/styles.css
@@ -9,73 +9,144 @@ body {
   align-items: center;
   display: flex;
   flex-direction: column;
-  font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
 .everything {
-    width: 320px;
-    background-image: linear-gradient(#ffffff,#f0f1ff);
-  }
+  width: 375px;
+  background-image: linear-gradient(#ffffff, #f0f1ff);
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
 
-  h1 {
-    font-size: 40px;
-  }
+header {
+  display: flex;
+  justify-content: space-between;
+}
 
-  .top-banner p {
-    font-size: 16px;
-    color: #83869a;
-  }
+header img {
+  margin-top: 20px;
+  width: 90px;
+  height: 23px;
+  margin-left: 10px;
+}
 
-  .top-banner button {
-    font-size: 16px;
-    border: none;
-    color: #ffffff;
-    width: 150px;
-    height: 55px;
-    background-image: linear-gradient(#ff6f48,#f02aa6);
-    border-radius: 45px;
-  }
+header button {
+  font-size: 16px;
+  border: none;
+  color: #ffffff;
+  width: 140px;
+  height: 48px;
+  background-color: #13183f;
+  border-radius: 45px;
+  margin-top: 10px;
+  margin-right: 10px;
+}
 
-  .hero {
-    width: 320px;
-    height: 320px;
-    align-self: center;
-  }
+h1 {
+  font-size: 40px;
+  margin: 20px 10px;
+}
 
-  .second-banner {
-    width: 310px;
-    height: 120px;
-    background-image: linear-gradient(#ff6f48,#f02aa6);
-    font-size: 15px;
-    border-radius: 15px;
-    line-height: -1px;
-  }
+.top-banner p {
+  font-size: 16px;
+  color: #83869a;
+  margin: 0 10px 10px 10px;
+}
 
-  h2 {
-    color: #ffffff;
-    padding-left: 30px;
-    padding-top: 20px;
-  }
+.top-banner button {
+  font-size: 16px;
+  border: none;
+  color: #ffffff;
+  width: 150px;
+  height: 55px;
+  background-image: linear-gradient(#ff6f48, #f02aa6);
+  border-radius: 45px;
+  margin: 10px;
+}
 
-  a {
-    color: #f74780;
-    text-decoration: none;
-  }
+.hero {
+  width: 100%;
+  height: auto;
+  align-self: center;
+}
 
-  footer {
-    background-color: #13183f;
-    width: 100%;
-    height: 120px;
-    display: flex;
-    justify-content: space-around;
-  }
+.second-banner {
+  width: 343px;
+  height: 120px;
+  background-image: linear-gradient(#ff6f48, #f02aa6);
+  font-size: 15px;
+  border-radius: 15px;
+  line-height: -1px;
+  margin: 0 auto 10px auto;
+}
 
-  footer button {
-    font-size: 16px;
-    border: none;
-    color: #ffffff;
-    width: 150px;
-    height: 55px;
-    background-image: linear-gradient(#4851ff,#f02aa6);
-    border-radius: 45px;
-  }
+h2 {
+  color: #ffffff;
+  padding-left: 20px;
+  padding-top: 20px;
+}
+
+a {
+  color: #f74780;
+  text-decoration: none;
+  padding: 10px 20px;
+}
+
+.animation,
+.design,
+.photography,
+.crypto,
+.business {
+  background-color: #ffffff;
+  width: 310px;
+  height: 250px;
+  border-radius: 10px;
+  margin: 30px auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+section {
+  position: relative;
+}
+
+section picture {
+  position: absolute;
+  top: -20px;
+  left: 20px;
+}
+
+section h3 {
+  padding: 10px 20px;
+}
+
+.para {
+  padding: 10px 20px;
+  text-align: left;
+  color: #83869a;
+}
+
+footer {
+  background-color: #13183f;
+  width: 100%;
+  height: 120px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer img {
+  width: 90px;
+  height: 23px;
+}
+
+footer button {
+  font-size: 16px;
+  border: none;
+  color: #ffffff;
+  width: 140px;
+  height: 48px;
+  background-image: linear-gradient(#4851ff, #f02aa6);
+  border-radius: 45px;
+}
