--- a/styles.css
+++ b/styles.css
@@ -242,3 +242,115 @@ footer button {
     margin-right: 40px;
   }
 }
+
+@media only screen and (min-width: 1439px) {
+  .everything {
+    width: 1440px;
+  }
+
+  .header {
+    width: 100%;
+    justify-content: space-between;
+    padding: 10px 20px;
+  }
+
+  .header img {
+    margin-left: 150px;
+  }
+
+  .header button {
+    margin-right: 150px;
+    z-index: 1;
+  }
+
+  .hero-banner {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+  }
+
+  .top-banner {
+    width: 457px;
+    height: 359px;
+    position: absolute;
+    top: 175px;
+    left: 150px;
+  }
+
+  .hero {
+    width: 991px;
+    height: 936px;
+    position: relative;
+    left: 700px;
+    top: -200px;
+  }
+
+  .content {
+    width: 1110px;
+    height: 748px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    top: -120px;
+  }
+
+  .second-banner {
+    width: 339px;
+    height: 259px;
+    position: relative;
+    top: 30px;
+  }
+
+  h2 {
+    color: #ffffff;
+    margin-top: 40px;
+  }
+
+  .animation,
+  .design,
+  .photography,
+  .crypto,
+  .business {
+    width: 339px;
+    height: 259px;
+  }
+
+  footer {
+    background-color: #13183f;
+    width: 100%;
+    height: 120px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  footer img {
+    width: 90px;
+    height: 23px;
+    margin-left: 150px;
+  }
+
+  footer button {
+    font-size: 16px;
+    border: none;
+    color: #ffffff;
+    width: 140px;
+    height: 48px;
+    background-image: linear-gradient(#4851ff, #f02aa6);
+    border-radius: 45px;
+    margin-right: 150px;
+  }
+
+  .top-banner button:hover {
+    opacity: 0.5;
+  }
+
+  .footer button:hover {
+    opacity: 0.5;
+  }
+
+  .header button:hover {
+    background-color: #666ca3;
+  }
+}
